# market-data-ingestor

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md
.build/: build.rs
.cargo/: config
.env/kafka/: docker-compose.yml
.hooks/: pre-commit
binance/: Cargo.toml
binance/src/: lib.rs  wsfeed.rs
common/: Cargo.toml
common/src/: lib.rs  model.rs  producer.rs
common/src/conf/: settings.rs
l2-ingestor/: Cargo.toml
l2-ingestor/src/: lib.rs  ws.rs
src/: lib.rs  main.rs  model.rs
