[package]
name = "binance-ingestor"
description = "L2 data ingestor for Binance exchange"
version = "0.1.0"
authors = ["jetTeam"]
publish = false
license = "GPL-3.0"
readme = "README.md"

[dependencies]
tokio-tungstenite = "0.8.0"
tokio = "0.1"
futures = "0.1.28"
url = "1.7.1"

#hyper = "0.12" # reqwest = "0.9"
#hyper-tls = "0.3"
#tokio = "0.1"
#tokio-tungstenite = "0.9"
#url = "2.1"

#futures = "0.1"

#serde = "1.0"
#serde_json = "1.0"
#serde_derive = "1.0"

#failure = "0.1"

#ring = "0.16"
#base64 = "0.10"
#hex = "0.3"
#sha2 = "0.8"
#hmac = "0.7"
#uuid = { version = "0.7", features = [ "serde", "v4" ] }

#chrono = { version = "0.4", features = [ "serde" ] }
#time = "0.1"

#log = "0.4"
#pretty_env_logger = "0.3"
