[package]
name = "l2-ingestor"
description = "L2 data ingestor library"
version = "0.1.0"
authors = ["jetTeam"]
publish = false
license = "GPL-3.0"
readme = "README.md"
build = "../.build/build.rs"

[dependencies]
tokio-tungstenite = "0.9"
tokio = "0.1"
futures = "0.1"
url = "2.1"
rdkafka = "0.21"
config = "0.9"

[build-dependencies]
built = "0.3"
